:sparkles: feat(theme): add animated theme toggler with view transition effects

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,3 +143,7 @@
 [data-aos="fade-down"].aos-animate {
   transform: translateY(0);
 }
+::view-transition-old(root), ::view-transition-new(root) {
+    animation: none;
+    mix-blend-mode: normal;
+}
